add read app-config route /app-congis/{key}
