# api/pkg/ent/ogent/oas_schemas_gen.go
@@ -123,6 +123,8 @@ func (s *AppConfigList) SetSource(val AppConfigListSource) {
 	s.Source = val
 }
 
+func (*AppConfigList) readAppConfigRes() {}
+
 type AppConfigListSource string
 
 const (
@@ -158,163 +160,6 @@ func (s *AppConfigListSource) UnmarshalText(data []byte) error {
 		return nil
 	case AppConfigListSourceEnvironment:
 		*s = AppConfigListSourceEnvironment
-		return nil
-	default:
-		return errors.Errorf("invalid value: %q", data)
-	}
-}
-
-// Ref: #/components/schemas/AppConfigRead
-type AppConfigRead struct {
-	ID          int64               `json:"id"`
-	CreatedAt   time.Time           `json:"created_at"`
-	UpdatedAt   time.Time           `json:"updated_at"`
-	DeletedAt   OptDateTime         `json:"deleted_at"`
-	AppName     string              `json:"app_name"`
-	Environment string              `json:"environment"`
-	Stack       string              `json:"stack"`
-	Key         string              `json:"key"`
-	Value       string              `json:"value"`
-	Source      AppConfigReadSource `json:"source"`
-}
-
-// GetID returns the value of ID.
-func (s *AppConfigRead) GetID() int64 {
-	return s.ID
-}
-
-// GetCreatedAt returns the value of CreatedAt.
-func (s *AppConfigRead) GetCreatedAt() time.Time {
-	return s.CreatedAt
-}
-
-// GetUpdatedAt returns the value of UpdatedAt.
-func (s *AppConfigRead) GetUpdatedAt() time.Time {
-	return s.UpdatedAt
-}
-
-// GetDeletedAt returns the value of DeletedAt.
-func (s *AppConfigRead) GetDeletedAt() OptDateTime {
-	return s.DeletedAt
-}
-
-// GetAppName returns the value of AppName.
-func (s *AppConfigRead) GetAppName() string {
-	return s.AppName
-}
-
-// GetEnvironment returns the value of Environment.
-func (s *AppConfigRead) GetEnvironment() string {
-	return s.Environment
-}
-
-// GetStack returns the value of Stack.
-func (s *AppConfigRead) GetStack() string {
-	return s.Stack
-}
-
-// GetKey returns the value of Key.
-func (s *AppConfigRead) GetKey() string {
-	return s.Key
-}
-
-// GetValue returns the value of Value.
-func (s *AppConfigRead) GetValue() string {
-	return s.Value
-}
-
-// GetSource returns the value of Source.
-func (s *AppConfigRead) GetSource() AppConfigReadSource {
-	return s.Source
-}
-
-// SetID sets the value of ID.
-func (s *AppConfigRead) SetID(val int64) {
-	s.ID = val
-}
-
-// SetCreatedAt sets the value of CreatedAt.
-func (s *AppConfigRead) SetCreatedAt(val time.Time) {
-	s.CreatedAt = val
-}
-
-// SetUpdatedAt sets the value of UpdatedAt.
-func (s *AppConfigRead) SetUpdatedAt(val time.Time) {
-	s.UpdatedAt = val
-}
-
-// SetDeletedAt sets the value of DeletedAt.
-func (s *AppConfigRead) SetDeletedAt(val OptDateTime) {
-	s.DeletedAt = val
-}
-
-// SetAppName sets the value of AppName.
-func (s *AppConfigRead) SetAppName(val string) {
-	s.AppName = val
-}
-
-// SetEnvironment sets the value of Environment.
-func (s *AppConfigRead) SetEnvironment(val string) {
-	s.Environment = val
-}
-
-// SetStack sets the value of Stack.
-func (s *AppConfigRead) SetStack(val string) {
-	s.Stack = val
-}
-
-// SetKey sets the value of Key.
-func (s *AppConfigRead) SetKey(val string) {
-	s.Key = val
-}
-
-// SetValue sets the value of Value.
-func (s *AppConfigRead) SetValue(val string) {
-	s.Value = val
-}
-
-// SetSource sets the value of Source.
-func (s *AppConfigRead) SetSource(val AppConfigReadSource) {
-	s.Source = val
-}
-
-func (*AppConfigRead) readAppConfigRes() {}
-
-type AppConfigReadSource string
-
-const (
-	AppConfigReadSourceStack       AppConfigReadSource = "stack"
-	AppConfigReadSourceEnvironment AppConfigReadSource = "environment"
-)
-
-// AllValues returns all AppConfigReadSource values.
-func (AppConfigReadSource) AllValues() []AppConfigReadSource {
-	return []AppConfigReadSource{
-		AppConfigReadSourceStack,
-		AppConfigReadSourceEnvironment,
-	}
-}
-
-// MarshalText implements encoding.TextMarshaler.
-func (s AppConfigReadSource) MarshalText() ([]byte, error) {
-	switch s {
-	case AppConfigReadSourceStack:
-		return []byte(s), nil
-	case AppConfigReadSourceEnvironment:
-		return []byte(s), nil
-	default:
-		return nil, errors.Errorf("invalid value: %q", s)
-	}
-}
-
-// UnmarshalText implements encoding.TextUnmarshaler.
-func (s *AppConfigReadSource) UnmarshalText(data []byte) error {
-	switch AppConfigReadSource(data) {
-	case AppConfigReadSourceStack:
-		*s = AppConfigReadSourceStack
-		return nil
-	case AppConfigReadSourceEnvironment:
-		*s = AppConfigReadSourceEnvironment
 		return nil
 	default:
 		return errors.Errorf("invalid value: %q", data)
