# api/pkg/ent/ogent/responses.go
@@ -42,42 +42,3 @@ func (ac *AppConfigList) Elem() AppConfigList {
 	}
 	return *ac
 }
-
-func NewAppConfigRead(e *ent.AppConfig) *AppConfigRead {
-	if e == nil {
-		return nil
-	}
-	var ret AppConfigRead
-	ret.ID = int64(e.ID)
-	ret.CreatedAt = e.CreatedAt
-	ret.UpdatedAt = e.UpdatedAt
-	ret.DeletedAt = OptDateTime{}
-	if e.DeletedAt != nil {
-		ret.DeletedAt.SetTo(*e.DeletedAt)
-	}
-	ret.AppName = e.AppName
-	ret.Environment = e.Environment
-	ret.Stack = e.Stack
-	ret.Key = e.Key
-	ret.Value = e.Value
-	ret.Source = AppConfigReadSource(e.Source)
-	return &ret
-}
-
-func NewAppConfigReads(es []*ent.AppConfig) []AppConfigRead {
-	if len(es) == 0 {
-		return nil
-	}
-	r := make([]AppConfigRead, len(es))
-	for i, e := range es {
-		r[i] = NewAppConfigRead(e).Elem()
-	}
-	return r
-}
-
-func (ac *AppConfigRead) Elem() AppConfigRead {
-	if ac == nil {
-		return AppConfigRead{}
-	}
-	return *ac
-}
