# api/pkg/ent/openapi.json
@@ -81,35 +81,68 @@
         }
       }
     },
-    "/app-configs/{id}": {
+    "/app-configs/{key}": {
       "get": {
-        "tags": [
-          "AppConfig"
-        ],
-        "summary": "Find a AppConfig by ID",
-        "description": "Finds the AppConfig with the requested ID and returns it.",
+        "description": "Finds the AppConfig with the requested Key and returns it.",
         "operationId": "readAppConfig",
         "parameters": [
           {
-            "name": "id",
-            "in": "path",
-            "description": "ID of the AppConfig",
-            "required": true,
+            "name": "page",
+            "in": "query",
+            "description": "what page to render",
             "schema": {
               "type": "integer",
-              "format": "int64",
-              "maximum": 4294967295,
-              "minimum": 0
+              "minimum": 1
+            }
+          },
+          {
+            "name": "itemsPerPage",
+            "in": "query",
+            "description": "item count to render per page",
+            "schema": {
+              "type": "integer",
+              "minimum": 1
+            }
+          },
+          {
+            "name": "app_name",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "environment",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "stack",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "key",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "AppConfig with requested ID was found",
+            "description": "AppConfig with requested Key was found",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/AppConfigRead"
+                  "$ref": "#/components/schemas/AppConfigList"
                 }
               }
             }
@@ -220,63 +253,6 @@
         ]
       },
       "AppConfigList": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64",
-            "maximum": 4294967295,
-            "minimum": 0
-          },
-          "created_at": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "updated_at": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "deleted_at": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "app_name": {
-            "type": "string"
-          },
-          "environment": {
-            "type": "string"
-          },
-          "stack": {
-            "type": "string"
-          },
-          "key": {
-            "type": "string"
-          },
-          "value": {
-            "type": "string"
-          },
-          "source": {
-            "type": "string",
-            "enum": [
-              "stack",
-              "environment"
-            ],
-            "default": "environment"
-          }
-        },
-        "required": [
-          "id",
-          "created_at",
-          "updated_at",
-          "app_name",
-          "environment",
-          "stack",
-          "key",
-          "value",
-          "source"
-        ]
-      },
-      "AppConfigRead": {
         "type": "object",
         "properties": {
           "id": {
